Bug 1728566 - Make the `HTMLEditor::InsertParagraphSeparatorAsSubAction` callers compute the editing host no limited in the `<body>` r=m_kato

While handling an "insertParagraph" command, it's closed at least in the editing
host.  Therefore, it's file to use editing host outside `<body>` because it
won't make the tree messy outside the editing host.

Differential Revision: https://phabricator.services.mozilla.com/D213376